# help_me

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml
backend/: Cargo.toml
backend/migrations/: 20211029224313_user_auth.up.sql  20211031154636_create_invites.down.sql  20211104190558_user_token_cascade.down.sql  20211104190558_user_token_cascade.up.sql  20211107015513_task_created_at.down.sql  20211107015513_task_created_at.up.sql  20211112115711_remove_pin.up.sql  20211128192519_fix_trigger_user.up.sql
backend/src/: logging.rs  main.rs
backend/src/api/: admin_users.rs  api_result.rs  auth.rs  catchers.rs  guards.rs  invite.rs  mod.rs  tasks.rs  user.rs
backend/src/models/: auth.rs  invite.rs  mod.rs  task.rs  user.rs
frontend/: Cargo.toml  index.html
frontend-old/: Cargo.toml  index.html
frontend-old/src/: main.rs
frontend-old/src/api/: tasks.rs  user.rs
frontend-old/src/components/: invites.rs  login.rs  mod.rs  nav_bar.rs  register.rs  requested_task.rs  tasks_list.rs  tutor_task.rs
frontend-old/src/pages/: index.rs  login.rs  mod.rs  register.rs  task.rs
frontend/src/: api.rs  main.rs  model.rs  msg.rs  state.rs
frontend/src/api/: admin.rs  auth.rs  mod.rs  refresh.rs  task.rs  tasks.rs  user.rs
frontend/src/components/: create_task_form.rs  edit_task.rs  guest_nav_bar.rs  invites.rs  login.rs  mod.rs  nav_bar.rs  register.rs  requested_task.rs  submit_task.rs  tasks_list.rs  tutor_task.rs  users.rs  view_task.rs
frontend/src/model/: mod.rs  page.rs  user.rs
frontend/src/model/page/: admin.rs  guest.rs  login.rs  mod.rs  register.rs  requested_guest.rs  settings.rs  tutor.rs
frontend/src/msg/: api.rs  mod.rs  page.rs  request.rs  response.rs
frontend/src/pages/: admin.rs  guest.rs  index.rs  login.rs  mod.rs  register.rs  requested_guest.rs  task.rs  tutor.rs
frontend/src/views/: edit_task.rs  guest_task.rs  invites.rs  login.rs  mod.rs  nav_bar.rs  register.rs  settings.rs  submit_task.rs  task_view.rs  tasks_list.rs  tutor_task.rs  users.rs  util.rs
migrations/: 20211029224313_user_auth.down.sql  20211031154636_create_invites.up.sql  20211104190558_user_token_cascade.down.sql  20211104190558_user_token_cascade.up.sql  20211106181118_add_tasks.up.sql
src/: main.rs
src/api/: admin_users.rs  auth.rs  guards.rs  invite.rs  mod.rs  tasks.rs  user.rs
src/models/: auth.rs  invite.rs  mod.rs  task.rs  user.rs
