[package]
authors = ["Roman Kolesnikov <roman.kolesnikov@hs-augsburg.de>"]
edition = "2021"
license = "MIT"
name = "help_me"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
rocket = "0.5.0-rc.1"
sqlx = {version = "0.5", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"]}
