[package]
authors = ["Roman Kolesnikov <roman.kolesnikov@hs-augsburg.de>"]
edition = "2021"
license = "MIT"
name = "help_me-backend"
version = "0.1.0"

[dependencies]
blake2 = "0.9"
chrono = "0.4"
dotenv = "0.15.0"
fern = {version = "0.6", features = ["colored"]}
futures = "0.3"
lazy_static = "1.4.0"
log = "0.4.14"
rand = "0.8.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tokio = {version = "1.13.0", features = ["full"]}

[dependencies.sqlx]
default_features = false
features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"]
version = "0.5.6"

# Some version of the master branch is used
# otherwise there would be emojis and color codes in the log file
[dependencies.rocket]
features = ["json"]
git = "https://github.com/SergioBenitez/Rocket"
rev = "8cae077"
